@@ -1038,9 +1038,17 @@ if(SHARED)
 else()
     set(SOPLEX_NEEDED ${SOPLEX_FOUND})
     set(ZIMPL_NEEDED ${ZIMPL_FOUND})
-    target_link_libraries(libscip PRIVATE ${ZIMPL_LIBRARIES} ${LPS_LIBRARIES})
+    if(DEFINED BLISS_TARGET)
+        target_link_libraries(libscip PRIVATE ${ZIMPL_LIBRARIES} ${LPS_LIBRARIES})
+    else()
+        target_link_libraries(libscip PRIVATE ${ZIMPL_LIBRARIES} ${LPS_LIBRARIES} ${SYM_LIBRARIES)
+    endif()
     add_executable(scip main.c)
-    target_link_libraries(scip libscip ${SYM_LIBRARIES})
+    if(DEFINED BLISS_TARGET)
+        target_link_libraries(scip libscip ${BLISS_TARGET})
+    else()
+        target_link_libraries(scip libscip)
+    endif()
 endif()
 
 add_executable(SCIP::SCIP ALIAS scip)
